--- a/COMPASSMOBILE Tasks/src/main/res/layout/activity_login.xml
+++ b/COMPASSMOBILE Tasks/src/main/res/layout/activity_login.xml
@@ -7,12 +7,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical"
+        android:weightSum="1"
         tools:context="com.hydrop.compassmobile.Activities.LoginActivity">
+
+        <TextView
+            android:id="@+id/versionValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="1.0"
+            android:textAlignment="viewEnd" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -22,25 +30,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textStyle="bold"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:imeOptions="actionNone"
+                android:text="@string/server_name"
                 android:textColor="@color/black"
-                android:text="@string/server_name"/>
+                android:textSize="20dp"
+                android:textStyle="bold" />
             <EditText
                 android:id="@+id/serverName"
-                android:nextFocusUp="@id/serverName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="textWebEmailAddress"
+                android:nextFocusUp="@id/serverName"
                 android:singleLine="true"
                 android:textSize="20dp"/>
         </LinearLayout>
@@ -48,21 +56,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:text="@string/username"
                 android:textColor="@color/black"
-                android:text="@string/username"/>
+                android:textSize="20dp"
+                android:textStyle="bold" />
             <EditText
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
                 android:imeOptions="actionDone"
+                android:singleLine="true"
                 android:textSize="20dp"/>
 
 
@@ -71,21 +79,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:text="@string/password"
                 android:textColor="@color/black"
-                android:text="@string/password"/>
+                android:textSize="20dp"
+                android:textStyle="bold" />
             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
                 android:imeOptions="actionDone"
+                android:inputType="textPassword"
                 android:singleLine="true"
                 android:textSize="20dp"/>
 
@@ -94,11 +102,101 @@
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimary"
             android:text="@string/login"
-            android:background="@color/colorPrimary"/>
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_weight="0.51" />
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/SupportOptions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/support_options" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/helpdeskLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toStartOf="@+id/helpdeskValue"
+                    android:text="@string/helpdeskLabel" />
+
+                <TextView
+                    android:id="@+id/helpdeskValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/helpdeskValue" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/emailLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="53dp"
+                    android:layout_toStartOf="@+id/emailValue"
+                    android:text="@string/emailLabel" />
+
+                <TextView
+                    android:id="@+id/emailValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="29dp"
+                    android:text="@string/emailValue" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/phoneLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="73dp"
+                    android:layout_toStartOf="@+id/phoneValue"
+                    android:text="@string/phoneLabel" />
+
+                <TextView
+                    android:id="@+id/phoneValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="52dp"
+                    android:text="@string/phoneValue" />
+            </TableRow>
+        </TableLayout>
 
     </LinearLayout>
 </ScrollView>
