--- a/COMPASSMOBILE Tasks/src/main/res/values/dimens.xml
+++ b/COMPASSMOBILE Tasks/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="spinners_top_margin">20dp</dimen>
+    <dimen name="control_Gap">14dp</dimen>
 </resources>
